# Hermes

./: .env  .env.example  .gitignore  CONTRIBUTING.md  README.md  architecture.md  fred_export_20260708_185642.csv  hermes.py  main.py  pyproject.toml
.github/workflows/: publish.yml
data/: imf.csv
docs/: index.html  package-lock.json  package.json
docs/src/: App.css  App.jsx  index.css
docs/src/layout/: DocLayout.jsx  Sidebar.jsx
docs/src/pages/: Home.jsx
docs/src/pages/docs/: AsyncDatabase.jsx  BIS.jsx  DataBase.jsx  FeatureStore.jsx  Filters.jsx  Fred.jsx  GettingStarted.jsx  Hermes.jsx  IMF.jsx  LineageGraph.jsx  MetadataRegistry.jsx  Migrations.jsx  RawCache.jsx  Schemas.jsx  StorageLayer.jsx  SyncDatabase.jsx  WorldBank.jsx
frontend/: package-lock.json
hermes/: __init__.py  _cache.py  base.py  config.py  countries.py  credentials.py  registry.py  settings.py
hermes/connectors/: __init__.py  base_model.py
hermes/connectors/base/: base_model.py  errors.py
hermes/connectors/finance/Macroeconomic/fred/: __init__.py  auth.py  authenticate.py  connector.py  export.py  fetch.py  health_check.py  transform.py  transformer.py  validate.py  validate_credentials.py
hermes/core/: __init__.py  errors.py  schemas.py
hermes/database/: __init__.py  _async.py  _filters.py  _migrate.py  _sync.py
hermes/features/: __init__.py  _composite.py  _registry.py  _risk.py  _timeseries.py
hermes/sources/: __init__.py  bis.py  comtrade.py  fred.py  gdelt.py  imf(test).py  imf.py  newsapi.py  ucdp.py  v_dem.py  world_bank.py
hermes/sources/finance/macroeconomics/fred/: __init__.py  fred.py
hermes/sources/finance/markets/alphavintage/: alphavintage.py
hermes/storage/: __init__.py  _cache.py  _feature_store.py  _lineage.py  _metadata.py
hermes/tui/: __init__.py  app.py  job_manager.py  main.py  saved_queries.py
hermes/tui/pages/: fred_tui.py
hermes/tui/screens/: category.py  cred_sources.py  credential_form.py  credentials.py  job_detail.py  jobs.py  main.py  saved_queries.py  settings.py  source.py  sources.py
hermes/tui/styles/: app.tcss
hermes/tui/test/: btn.py
hermes/tui/widgets/: credentials_form.py  footer.py  footers.py  header.py  headers.py  job_table.py  main_menu.py  menu.py  name.py  parameter_form.py  status_bar.py  tree.py
research/docs/: fred.json  fred1.json
research/notebooks/: data_identification.ipynb
src/hermes/: config.py
src/hermes/api/: __init__.py  server.py
src/hermes/api/models/: fred_model.py
src/hermes/api/routers/: __init__.py  fred_api.py
src/hermes/connectors/: base_model.py
src/hermes/connectors/fred/: __init__.py  client.py  connector.py  fetch.py  indicators.py  mapper.py  repository.py  validate.py  validator.py
src/hermes/database/: __init__.py  database.py  repository.py
src/hermes/database/migrations/: 001_initial.sql
src/hermes/models/: __init__.py  fred_model.py
test/: data.ipynb  data.py
