[project]
name = "hermes-plt"
version = "0.1.1"
description = "Foundational intelligence data platform for acquiring, validating, normalizing, storing, and serving intelligence datasets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Hermes Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyfiglet>=1.0.4",
    "sqlalchemy>=2.0.51",
    "supabase>=2.31.0",
    "textual>=3.1.0",
    "uvicorn>=0.50.0",
]

[tool.hatch.build.targets.wheel]
packages = ["hermes"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
