[project]
name = "hermes-plt"
version = "0.1.1"
description = "Foundational intelligence data platform for acquiring, validating, normalizing, storing, and serving intelligence datasets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Hermes Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["hermes"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
